crates/testing/compiletest-integration/tests/ui/type-mismatch-basic.rs
fn main() -> i64 {
    let x: i64 = "string"; //~ ERROR type mismatch
    x
}
